--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
+    "request-promise-native": "^1.0.8"
   },
   "devDependencies": {},
   "scripts": {
